3Dcar/3DSeparatedCar/style.css
/* ... */
div.simpleRoad .node {
  transform-style: preserve-3d;
}

div.simpleRoad .item {
  width: 100px;
  height: 100px;
  position: absolute;
  top: -50px;
  left: -50px;
}

/* Creating the cube... */

div.simpleRoad .item.index1 {
  transform: translateZ(50px);
}

div.simpleRoad .item.index2 {
  transform: rotateY(90deg) translateZ(50px);
}

div.simpleRoad .item.index3 {
  transform: rotateY(180deg) translateZ(50px);
}

div.simpleRoad .item.index4 {
  transform: rotateY(270deg) translateZ(50px);
}

div.simpleRoad .item.index5 {
  transform: rotateX(90deg) translateZ(50px);
}

div.simpleRoad .item.index6 {
  transform: rotateX(270deg) translateZ(50px);
}

/************************************
   *              Car
   ***********************************/

/* Group in order to grab all element from the car */
div.simpleRoad .carGroup {
  transition: transform 0.8s ease;
  will-change: transform;
}

/* .roadToggle is used in order to give user the ability to drive car left/right */
div.simpleRoad .roadToggle {
  width: 300px;
  height: 300px;
  position: absolute;
  top: -50px;
  left: -50px;
  transform: translate3d(50px, -100px, -150px) rotateY(180deg);
}

div.simpleRoad .roadToggle:hover + .carGroup {
  transform: translateX(40px);
}

/* Here really start the construction of the car */
div.simpleRoad .carBodyNode {
  transform: translate3d(-21px, -5px, -50px);
  animation: SR-drive 5s linear infinite 1.5s;
  will-change: transform;
}

div.simpleRoad .carBodyBlock {
  transform: translateY(-5px) scale3d(0.3, 0.1, 0.6);
}

div.simpleRoad .wheelNode1 {
  transform: translate3d(-15px, -2px, 18px);
}

div.simpleRoad .wheelNode2 {
  transform: translate3d(15px, -2px, 18px);
}

div.simpleRoad .wheelNode3 {
  transform: translate3d(15px, -2px, -18px);
}

div.simpleRoad .wheelNode4 {
  transform: translate3d(-15px, -2px, -18px);
}

div.simpleRoad [class^="wheelBlock"] {
  transform: scale3d(0.05, 0.1, 0.1);
  animation: SR-wheel 1s linear infinite 1.5s;
  will-change: transform;
}

/* Car cockpit */

div.simpleRoad [class^="cockpitNode"] {
  transform: translate3d(0px, -15px, 0);
}

div.simpleRoad .cockpitBlock1 {
  transform: rotateY(90deg) scale3d(0.3, 0.1, 0.3) skewX(-10deg);
}

div.simpleRoad .cockpitBlock2 {
  transform: translateZ(-5px) rotateY(90deg) scale3d(0.3, 0.1, 0.3) skewX(10deg);
}

/* -------------- Dashboard Styling -------------- */

div.simpleRoad .carGroup .dashboardNode {
  /* Position the dashboard within the car */
  position: absolute;
  top: -15px; /* Adjust as needed */
  left: 0;
  transform: translateX(0%) translateZ(80px); /* Adjust Z to move it forward/back */
}

div.simpleRoad .carGroup .dashboardBlock {
  width: 20px;
  height: 50px;
  position: absolute;
  transform: rotateX(90deg); /* Tilt the dashboard for a realistic view */
}

div.simpleRoad .carGroup .dashboardBlock .item {
  width: 30px;
  height: 10px;
  position: absolute;
}

/* Dashboard Faces */
div.simpleRoad .carGroup .dashboardFace1 {
  /* top */
  width: 35px;

  transform: translateZ(20px) translateX(35px) translateY(5px);
  background: var(--default-car); /* Dark dashboard color */
}

div.simpleRoad .carGroup .dashboardFace2 {
  /* Bottom of the dashboard */
  transform: rotateX(90deg) translateZ(0px) translateY(17px) translateX(30px)
    scale(0.75);
  background: #616363;
  width: 40px;
  height: 45px;
  z-index: 100;
}

div.simpleRoad .carGroup .dashboardFace3 {
  /* steering whee1 */
  transform: rotateX(50deg) translateZ(41px) translateY(-8px) translateX(10px)
    scale(0.09);
  border-radius: 50%;

  border: 20px solid #000000; /* Outer ring */
  background-color: transparent;
  animation: turnBackAndForth 10s ease-in-out infinite;
}
div.simpleRoad .carGroup .dashboardFace4 {
  /* steering wheel2 */
  transform: rotateX(50deg) translateZ(20px) translateY(-8px) translateX(10px)
    scale(0.075);
  border-radius: 50%;

  border: 20px solid #353535; /* Outer ring */
  background-color: transparent;
  animation: turnBackAndForth 10s ease-in-out infinite;
}
div.simpleRoad .carGroup .dashboardFace6 {
  /* steering wheel3 */
  transform: rotateX(50deg) translateZ(4px) translateY(-8px) translateX(10px)
    scale(0.04);
  border-radius: 50%;

  border: 20px solid #333232; /* Outer ring */
  background-color: transparent;
  animation: turnBackAndForth 10s ease-in-out infinite;
}

div.simpleRoad .carGroup .dashboardFace5 {
  /* large screen borders */
  transform: rotateX(50deg) translateZ(4px) translateY(3.5px) translateX(40px)
    scale(0.2);
  background: #272727;
}
div.simpleRoad .carGroup .dashboardFace7 {
  /* large screen*/
  transform: rotateX(50deg) translateZ(5px) translateY(3.5px) translateX(40px)
    scale(0.19);
  background: #59a6b8;
  border-radius: 5%;
}
div.simpleRoad .carGroup .dashboardFace8 {
  /* small screen border */
  transform: rotateX(50deg) translateZ(5px) translateY(4.5px)
    translateX(29.75px) scale(0.1);
  background: #0f0f0f;
}

div.simpleRoad .carGroup .dashboardFace9 {
  /* small screen */
  transform: rotateX(50deg) translateZ(5px) translateY(4.5px)
    translateX(29.75px) scale(0.08);
  background: #59a6b8;
  border-radius: 10%;
}

#dashboard2 {
  width: 40px;
}

/* Vertical Dashboard Panel */
div.simpleRoad .carGroup .dashboardBlock .verticalDashboard {
  position: absolute;
  width: 30px;
  height: 10px;
  background: #707070;
  transform: translateZ(20px) translateY(3px) translateX(35px);
  transform-origin: center;
  z-index: 100;
}

/* External trunk top */
div.simpleRoad .trunkExternal {
  position: absolute;
  width: 100px;
  height: 28px;
  background: var(--default-car, gray);
  transform: translateY(-5px) translateZ(-35px) rotateX(90deg);
  transform-origin: center;
  clip-path: polygon(0 0, 100% 0, 100% 50%, 0 50%);
}
/* ... */

